# cyberpunk-portfolio

./: .gitignore  .htmlhintrc  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  LICENSE  README.md  eslint.config.mjs  index.html  lefthook.yml  package.json  tsconfig.json  writeups.html
.github/workflows/: build.yml  lint.yml  tests.yml
assets/css/: styles.css  writeupIndex.css  writeups.css
assets/js/: index.js  menu.js  writeups.js
public/: about.html  index.html  writeups.html
public/writeups/: xss_writeup_1.html  xss_writeup_10.html  xss_writeup_3.html  xss_writeup_5.html  xss_writeup_6.html  xss_writeup_7.html  xss_writeup_8.html  xss_writeup_9.html
scripts/utils/: deduplicate.cjs
src/css/: styles.css  writeupIndex.css  writeups.css
src/html/: template.html
src/md/: input.md  xss_writeup_1.md  xss_writeup_10.md  xss_writeup_2.md  xss_writeup_3.md  xss_writeup_4.md  xss_writeup_5.md  xss_writeup_6.md  xss_writeup_7.md  xss_writeup_8.md  xss_writeup_9.md
src/rust/vectors/: Cargo.toml
src/rust/vectors/src/: main.rs
src/ts/: index.ts  menu.ts  writeups.ts
src/ts/commands/: index.ts  registry.ts  types.ts
src/ts/drag/: drag.ts  types.ts
src/ts/environment/: environment.ts  types.ts
src/ts/hinting/: closest.ts  hinting.ts  index.ts
src/ts/history/: history.ts
src/ts/musicplayer/: index.ts  musicplayer.ts  playerParts.ts  registry.ts  tracks.ts
src/ts/prompt/: prompt.ts
src/ts/stdout/: index.ts  stdout.ts
src/ts/terminal/: index.ts  terminal.ts  (+1 more)
writeups/: input.html  xss_writeup_2.html  xss_writeup_4.html
(+17 files in other folders)
