[package]
name = "vector-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-bert = { version = "0.23" }
tokenizers = "0.15"
tch = { version = "0.17" }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
console = { version = "0.16", features = ["std"] }
